Clean up code
* Upgrade code to Java 17
* Remove deprecations